# practicepython

./: LICENSE  README.md  pyproject.toml
