[tool.poetry]
name = "practicepython"
version = "0.1.0"
description = "Learn Python By Example"
authors = ["Huynh Duc Dung <dunghd.it@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"

[tool.poetry.group.test] # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "7.4.4"
pytest-mock = "3.12.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
