[tool.poetry]
name = "practicepython"
version = "0.1.0"
description = "Learn Python By Example"
authors = ["Huynh Duc Dung <dunghd.it@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"

[tool.poetry.group.test] # This part can be left out

[tool.poetry.group.test.dependencies]
pytest = "8.3.2"
pytest-mock = "3.14.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
